PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Fix potential crash in list-installed-suites sub-command
- phoromatic: Workaround for instr() usage in SQLite that caused issues with older distributions
- phoromatic: Add LetPublicViewResults option and new public results listing page
- phoromatic: Update results selection on rootadmin data page

Phoronix Test Suite 5.8 Milestone 1
2 April 2015

- pts-core: Start moving possible deployment scripts into deploy/ directory
- pts-core: Move phoromatic-client and phoromatic-server Upstart job files to deploy/
- pts-core: Move phoromatic-client and phoromatic-server systemd service files to deploy/
- pts-core: Add very basic result-file-to-json sub-command
- pts-core: Drop AnonymousHardwareReporting / AnonymousSoftwareReporting as no longer used on OpenBenchmarking.org
- Pull in JuJu scripts from https://github.com/juju-solutions/pts to deploy/juju
- phodevi: More allowance for clients to recover Internet connection / server communication failure
- phoromatic: Clean-up main page schedule for schedules with no associated systems
- phoromatic: Show matching ticket results in the compare results column on results page
- phoromatic: Allow results page to be limited to particular hash or ticket matches
- phoromatic: Allow results page search box to also search system's hardware/software components
- phoromatic: Fix for removing a system from all groups on the "system group editing" systems page
- phoromatic: Allow per-system overriding of whether automatic power-offs of system are permitted
- phoromatic: Get rid of block-poweroff file check in client module now that it can be done per-system from server-side
- phoromatic: Allow WoL power-ups for honoring benchmark tickets
- phoromatic: Unify more code from start.php into phoromatic_server
- phoromatic: Always unset the GRUB recordfail when applicable
- phoromatic: Add "System Maintenance Table"