@@ -259,7 +259,7 @@ class phoromatic_server
 		$headers .= "From: Phoromatic - Phoronix Test Suite <no-reply@phoromatic.com>\r\n";
 		$headers .= "Reply-To: " . $from . " <" . $from . ">\r\n";
 
-		mail($to, $subject, $msg, $headers);
+		//mail($to, $subject, $msg, $headers);
 	}
 	protected static function rebuild_pprid_entries()
 	{
